[package]
name = "physsol"
version = "0.1.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
description = "Lightweight 2d and 3d physics library"
documentation = "https://nthend.github.io/physsol-rs/target/doc/vecmat/"
homepage = "https://github.com/nthend/physsol-rs"
repository = "https://github.com/nthend/physsol-rs"
keywords = ["physics", "solver", "2d", "3d", "math"]
categories = ["algorithms", "science"]
license = "MIT/Apache-2.0"

[dependencies]
vecmat = "0.2.3"
