[package]
name = "physsol"
version = "0.1.1"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
description = "Lightweight 2d and 3d physics library"
documentation = "https://nthend.github.io/physsol-rs/target/doc/physsol/"
homepage = "https://github.com/nthend/physsol-rs"
repository = "https://github.com/nthend/physsol-rs"
keywords = ["physics", "solver", "2d", "3d", "math"]
categories = ["algorithms", "science", "data-structures"]
license = "MIT/Apache-2.0"

[dependencies]
vecmat = { git = "https://github.com/nthend/vecmat-rs", rev = "f7c4b4374d54d20784d320fca88c9b07a52d0774" }
