[package]
name = "physsol"
version = "0.2.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
description = "Lightweight 2d and 3d physics library"
documentation = "https://nthend.github.io/physsol-rs/target/doc/physsol/"
homepage = "https://github.com/nthend/physsol-rs"
repository = "https://github.com/nthend/physsol-rs"
readme = "README.md"
keywords = ["physics", "solver", "2d", "3d", "math"]
categories = ["algorithms", "science", "data-structures"]
license = "MIT/Apache-2.0"

[dependencies]
vecmat = "0.3"
num-traits = "0.2"
